bugfix color clipping

--- a/src/app/components/core/homepage/homepage.component.scss
+++ b/src/app/components/core/homepage/homepage.component.scss
@@ -32,9 +32,9 @@
 
 .title-name>div {
     opacity: 0;
-    background-color: #f3ec78;
     background-image: linear-gradient(135deg, #E0FFFF 20%, #FF00FF);
     background-size: 100%;
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -59,6 +59,7 @@
     color: #0d0d0d;
     transform: skew(-35deg);
     padding: 1%;
+    color: currentColor;
 }
 
 .programming-languages {
